<resources>
    <string name="app_name">Oxyrate</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detect">Detection</string>
    <string name="heartrate">Heart Rate</string>
    <string name="nilai">120</string>
    <string name="bpm">bpm</string>
    <string name="Status">Status :</string>
    <string name="normal">Normal</string>
    <string name="Celcius">°C</string>
    <string name="Persen">%</string>
    <string name="temperature">Temperature</string>
    <string name="spo">SpO2</string>
    <string name="greet">Hi, Wellcome back</string>
    <string name="name">Users </string>
    <string name="title_logo">Oxyrate</string>>
    <string name="tips">Tips</string>
    <string name="disorder">Disease</string>
    <string name="Headlines">Tips menghindari kelelahan saat olahraga</string>
    <string name="TipsDesc">If your goal is fat loss, incorporate four to six, 30 to 60-minute cardio sessions per week into your training schedule.</string>
    <string name="hipoxia">Hipoxia</string>
    <string name="result">Result</string>
    <string name="temp">Temp</string>
    <string name="pleaseLogin">Login</string>
    <string name="userName">Username</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="createAccount">Register</string>
    <string name="category">Category</string>
    <string name="results">Result :</string>
    <string name="categorys">Category :</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="NoHp">No Hp</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="date">02-10-2023</string>
    <string name="empty">Belum ada history</string>
    <string name="logout">Logout</string>
    <string name="save">Save to History</string>
    <string name="profile">Profile</string>
    <string name="Detail">Detail</string>
    <string name="PasswordHashed">*************</string>
    <string name="EmailAddress">jhondhoe@gmail.com</string>
    <string name="historyAndGraph"><![CDATA[History & Grafik]]></string>
    <string-array name="gender">
        <item>male</item>
        <item>female</item>
    </string-array>
</resources>